RESOLVED FIXED305207
SVG without intrinsic dimensions incorrectly offset when object-fit is applied
https://bugs.webkit.org/show_bug.cgi?id=305207
Summary SVG without intrinsic dimensions incorrectly offset when object-fit is applied
Taher
Reported 2026-01-09 09:15:17 PST
ssia
Attachments
Radar WebKit Bug Importer
Comment 1 2026-01-09 09:15:23 PST
Taher
Comment 2 2026-01-09 09:21:16 PST
EWS
Comment 3 2026-01-12 17:48:53 PST
Committed 305490@main (cba51e3392ef): <https://commits.webkit.org/305490@main> Reviewed commits have been landed. Closing PR #56345 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.