Cherry-pick cba51e3392ef. rdar://168176556

Fix rendering for SVG images without intrinsic dimensions and with object-fit
    https://bugs.webkit.org/show_bug.cgi?id=305207
    rdar://167848972

    Reviewed by Simon Fraser.

    For SVGs without width, height, or viewBox attributes, object-fit was
    causing rects to be clipped out due to the default 300x150 intrinsic size.

    We bypass object-fit calculations for dimensionless SVGs by using
    contentBoxRect for both container and paint rect. This results
    in a correct display.

    * LayoutTests/imported/w3c/web-platform-tests/css/css-images/object-fit-dimensionless-svg-001-expected.html: Added.
    * LayoutTests/imported/w3c/web-platform-tests/css/css-images/object-fit-dimensionless-svg-001-ref.html: Added.
    * LayoutTests/imported/w3c/web-platform-tests/css/css-images/object-fit-dimensionless-svg-001.html: Added.
    * Source/WebCore/rendering/RenderImage.cpp:
    (WebCore::RenderImage::updateInnerContentRect):
    (WebCore::RenderImage::isDimensionlessSVG const):
    (WebCore::RenderImage::paintReplaced):
    * Source/WebCore/rendering/RenderImage.h:
    * Source/WebCore/svg/SVGSVGElement.cpp:
    (WebCore::SVGSVGElement::hasIntrinsicDimensions const):
    * Source/WebCore/svg/SVGSVGElement.h:

    Canonical link: https://commits.webkit.org/305490@main

Identifier: 305413.23@safari-7624-branch